# postcad

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PROTOCOL_V1.md  README.md  demo.html  docker-compose.yml  fly.toml  index.html  railway.toml
crates/audit/: Cargo.toml
crates/audit/src/: canonical.rs  chain.rs  fingerprint.rs  lib.rs  proof.rs  receipt.rs  registry_snapshot.rs  service.rs  trace.rs  verify.rs
crates/cli/: Cargo.toml
crates/cli/src/: candidate_snapshot.rs  lib.rs  main.rs  manifest.rs  pilot_input.rs  policy_bundle.rs  proof.rs  receipt.rs  registry_export.rs  registry_routing.rs  verifier.rs
crates/cli/tests/: cli_artifact_contract.rs  cli_errors.rs  contract.rs  fuzz_determinism.rs  golden.rs  pilot_input_tests.rs  pilot_route_normalized_tests.rs  protocol_boundary.rs  protocol_closure_sweep.rs  protocol_freeze.rs  protocol_v1_freeze.rs  protocol_vector_tests.rs  protocol_verifier_vector_tests.rs  receipt_long_term_verification.rs  receipt_schema_contract.rs  registry_export_tests.rs  registry_routing_tests.rs  routing_proof_tests.rs
crates/service/: Cargo.toml
crates/service/src/: case_store.rs  demo.rs  dispatch_commitment.rs  dispatch_store.rs  handlers.rs  lib.rs  main.rs  policy_store.rs  receipt_store.rs  reviewer.rs  ui.rs  verification_store.rs
crates/service/tests/: acceptance_runner_test.rs  case_intake_tests.rs  case_routing_tests.rs  demo_bundle_tests.rs  dispatch_commitment_tests.rs  night_tail_surface_tests.rs  openapi_contract_smoke.rs  operator_ui_tests.rs  pilot_artifact_index_surface_tests.rs  pilot_artifact_index_tests.rs  pilot_audit_receipt_surface_tests.rs  pilot_bundle_smoke_test.rs  pilot_business_entrypoint_surface_tests.rs  pilot_command_guardrails_tests.rs  pilot_command_map_surface_tests.rs  pilot_decision_tests.rs  pilot_demo_surface_tests.rs  pilot_dispatch_operator_output_tests.rs  pilot_dispatch_packet_surface_tests.rs  pilot_engineer_entrypoint_surface_tests.rs  pilot_handoff_tests.rs  pilot_help_surface_tests.rs  pilot_http_tests.rs  pilot_inbound_default_path_tests.rs  pilot_inbound_inspect_tests.rs  pilot_inbound_response_tests.rs  pilot_inbound_simulator_tests.rs  pilot_intake_triage_tests.rs  pilot_lab_entrypoint_surface_tests.rs  pilot_lab_trial_package_tests.rs  pilot_ledger_tests.rs  pilot_manual_reply_tests.rs  (+31 more)
(+257 files in other folders)
