[package]
name = "postcad-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
postcad-core = { workspace = true }
postcad-registry = { workspace = true }
postcad-compliance = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
