[package]
name = "postcad-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
postcad-core = { workspace = true }
postcad-registry = { workspace = true }
postcad-compliance = { workspace = true }
postcad-routing = { workspace = true }
postcad-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
proptest = { workspace = true }
